--- a/base/templates/landing.html
+++ b/base/templates/landing.html
@@ -274,8 +274,8 @@
 
             margin: 0;
 
-            background: #780117;
-            color: #e9c1e8;
+            background: #770016;
+            color: #e7bfe9;
 
             border-radius: 0 0 200px 200px;
 
@@ -570,7 +570,7 @@
 
                     <h1 class="head1">Создание сайтов под ключ</h1>
                     <h2 class="desc1">Быстро и  качественно разработаем ваш сайт</h2>
-                    <button id="ctaBtn">Получить консультацию</button>
+                    <button id="ctaBtn">Заказать сайт</button>
 
                 </div>
 
