--- a/static/css/base/landing.css
+++ b/static/css/base/landing.css
@@ -42,6 +42,12 @@ button {
 
 }
 
+button:focus {
+
+    outline: none;
+
+}
+
 a {color: inherit;}
 
 h1 {margin: 0;}
@@ -84,10 +90,20 @@ header {
     width: 95px;
     height: 95px;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     border-radius: 200px;
 
     box-shadow:  5px 5px 10px #b5b5b5,
         -5px -5px 10px #ffffff;
+
+}
+
+.logo svg {
+
+    transform: scale(0.5);
 
 }
 
@@ -323,20 +339,29 @@ ul {list-style-type: none;}
     position: relative;
     top: 150px;
 
-
-    width: 1300px;
+    width: 1500px;
     height: 900px;
 
     display: flex;
     
-    
-    border: 1px solid black;
+
+}
+
+.portfolio-work {
+
+    width: 1200px;
+    height: 600px;
+
+    border-radius: 30px;
+
+    border: 1px solid red;
 
 }
 
 .portfolio-control {
 
     position: relative;
+    top: 230px;
 
     width: 100px;
     height: 100px;
@@ -344,6 +369,8 @@ ul {list-style-type: none;}
     display: flex;
     justify-content: center;
     align-items: center;
+
+    margin: 30px;
 
     border-radius: 200px;
 
