--- a/base/templates/landing.html
+++ b/base/templates/landing.html
@@ -31,12 +31,12 @@
         }
 
         @font-face {
-            font-family: YOR;
-            src: url("{% static 'fonts/YesevaOne-Regular.ttf' %}");
+            font-family: Jost;
+            src: url("{% static 'fonts/Jost.ttf' %}");
         }
 
         body, button, input {
-            font-family: YOR;
+            font-family: Jost;
         }
 
     </style>
@@ -101,7 +101,7 @@
 
         <div class="contact-btn">
 
-            <button id="contactBtn">Обратный звонок</button>
+            <button id="contactBtn"><b>Обратный звонок</b></button>
 
         </div>
         
@@ -142,11 +142,59 @@
 
             <div class="content">
 
+                <div class="key-svg">
+ 
+                    <svg width="783" height="137" viewBox="0 0 783 137" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <ellipse cx="716.977" cy="34.25" rx="31.8848" ry="34.25" fill="#51000F"/>
+                        <ellipse cx="716.546" cy="34.7129" rx="23.6982" ry="25.4561" fill="#770016"/>
+                        <ellipse cx="716.977" cy="102.75" rx="31.8848" ry="34.25" fill="#51000F"/>
+                        <ellipse cx="759.634" cy="68.9628" rx="22.8364" ry="24.5304" fill="#51000F"/>
+                        <ellipse cx="716.546" cy="103.213" rx="23.6982" ry="25.4561" fill="#770016"/>
+                        <ellipse cx="759.634" cy="68.9628" rx="15.0807" ry="16.1993" fill="#770016"/>
+                        <ellipse cx="729.904" cy="69.4257" rx="18.9585" ry="20.3649" fill="#770016"/>
+                        <path d="M727.374 68.938L675.626 54.1733L675.648 83.7917L727.374 68.938Z" fill="#51000F"/>
+                        <path d="M732.489 69.4257C732.489 74.0268 729.016 77.7568 724.733 77.7568C720.45 77.7568 716.977 74.0268 716.977 69.4257C716.977 64.8246 720.45 61.0946 724.733 61.0946C729.016 61.0946 732.489 64.8246 732.489 69.4257Z" fill="#51000F"/>
+                        <rect x="706.636" y="60.1689" width="6.03226" height="17.5878" fill="#51000F"/>
+                        <rect y="61.0946" width="723.01" height="16.6622" fill="#51000F"/>
+                        <rect x="6.89404" y="85.1622" width="68.9401" height="43.5068" fill="#51000F"/>
+                        <rect x="31.8848" y="75.9054" width="19.8203" height="12.9595" fill="#51000F"/>
+                        <rect x="22.4055" y="112.007" width="9.47927" height="24.9932" fill="#771421"/>
+                        <rect x="22.4055" y="112.007" width="9.47927" height="24.9932" fill="#771421"/>
+                        <rect x="22.4055" y="112.007" width="9.47927" height="24.9932" fill="#771421"/>
+                        <rect x="22.4055" y="112.007" width="9.47927" height="24.9932" fill="#771421"/>
+                        <rect x="22.4055" y="112.007" width="9.47927" height="24.9932" fill="#771421"/>
+                        <rect x="22.4055" y="112.007" width="9.47927" height="24.9932" fill="#771421"/>
+                        <rect x="22.4055" y="112.007" width="9.47927" height="24.9932" fill="#771421"/>
+                        <rect x="22.4055" y="112.007" width="9.47927" height="24.9932" fill="#771421"/>
+                        <rect x="22.4055" y="112.007" width="9.47927" height="24.9932" fill="#771421"/>
+                        <rect x="22.4055" y="112.007" width="9.47927" height="24.9932" fill="#771421"/>
+                        <path d="M52.5669 112.007H62.0462V137H52.5669V112.007Z" fill="#771421"/>
+                        <path d="M52.5669 112.007H62.0462V137H52.5669V112.007Z" fill="#771421"/>
+                        <path d="M52.5669 112.007H62.0462V137H52.5669V112.007Z" fill="#771421"/>
+                        <path d="M52.5669 112.007H62.0462V137H52.5669V112.007Z" fill="#771421"/>
+                        <path d="M52.5669 112.007H62.0462V137H52.5669V112.007Z" fill="#771421"/>
+                        <ellipse cx="7.3249" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="7.3249" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="7.3249" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="7.3249" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="7.3249" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="7.3249" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="7.3249" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="76.265" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="76.265" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="76.265" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="76.265" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="76.265" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="76.265" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        <ellipse cx="76.265" cy="95.8074" rx="5.60139" ry="6.94257" fill="#771421"/>
+                        </svg>
+                        
+                </div>
+
                 <div class="text">
 
-                    <h1 class="head1">Создание сайтов под ключ</h1>
-                    <h2 class="desc1">Быстро и  качественно разработаем ваш сайт</h2>
-                    <button id="ctaBtn">Заказать сайт</button>
+                    <h1 class="head1"><span class="h1-1"><i>cоздание</i></span> <br> <span class="h1-2">САЙТОВ</span> <br> <span class="h1-1 last"><i>под <b>ключ</b></i></span></h1>
+                    <button id="ctaBtn"><b>Заказать сайт</b></button>
 
                 </div>
 
@@ -178,13 +226,23 @@
 
                         <div class="portfolio-work-image">
 
-                            <img src="" alt="">
+                            <section id="portfolio-bank-website">
+
+                                <img src="{% static 'img\portfolio\заказать_интернет_сайт.jpg' %}" alt="Заказать Интернет Сайт">
+
+                            </section>
 
                         </div>
 
                     </div>
 
-                    <button id="nextWork" class="portfolio-control">→</button>
+                    <button id="nextWork" class="portfolio-control">
+
+                        <svg class='portfolio-control-svg' xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 24 24" fill="none">
+                            <path d="M14.9991 19L9.83911 14C9.56672 13.7429 9.34974 13.433 9.20142 13.0891C9.0531 12.7452 8.97656 12.3745 8.97656 12C8.97656 11.6255 9.0531 11.2548 9.20142 10.9109C9.34974 10.567 9.56672 10.2571 9.83911 10L14.9991 5" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+
+                    </button>
 
                 </div>
 
@@ -193,35 +251,6 @@
         </div>
 
     </div>
-
-    <section class="pricing">
-        <h2>Цены и тарифы</h2>
-        <div class="plan">
-            <h3>Лендинг</h3>
-            <p>7 тыс. руб.</p>
-            <p>Срок разработки: 1 неделя</p>
-        </div>
-        <div class="plan">
-            <h3>Многостраничный сайт</h3>
-            <p>14 тыс. руб.</p>
-            <p>Срок разработки: 2 недели</p>
-        </div>
-        <div class="plan">
-            <h3>Интернет-магазин</h3>
-            <p>22 тыс. руб.</p>
-            <p>Срок разработки: 3 недели</p>
-        </div>
-        <div class="plan">
-            <h3>Приложение</h3>
-            <p>33 тыс. руб.</p>
-            <p>Срок разработки: 1 месяц</p>
-        </div>
-    </section>
-
-    <section class="features">
-       
-    </section>
-
 
     <footer>
         <nav class="footer-nav">
@@ -236,7 +265,7 @@
 
     <script>
 
-        $('#ctaBtn, #contactBtn').click(function() {
+        $('.logo, #ctaBtn, #contactBtn, .portfolio-control').click(function() {
 
             btn = $(this);
 
@@ -248,9 +277,11 @@
 
             }, 250);
 
+        });
+
+        $('#ctaBtn, #contactBtn').click(function() {
 
             $('#contactForm').css('display', 'flex');
-            
 
         });
 
