--- a/static/css/base/landing.css
+++ b/static/css/base/landing.css
@@ -96,8 +96,15 @@ header {
 
     border-radius: 200px;
 
-    box-shadow:  5px 5px 10px #b5b5b5,
+    box-shadow: 5px 5px 10px #b5b5b5,
         -5px -5px 10px #ffffff;
+
+}
+
+.logo.in {
+
+    box-shadow: inset 5px 5px 10px #b5b5b5,
+        inset -5px -5px 10px #ffffff;
 
 }
 
@@ -236,11 +243,11 @@ ul {list-style-type: none;}
 .s1 {
 
     position: relative;
-    top: -130px;
+    top: -140px;
     left: 0;
 
     width: 100%;
-    height: 1300px;
+    height: 1400px;
 
     margin: 0;
 
@@ -253,6 +260,60 @@ ul {list-style-type: none;}
 
     z-index: 7;
     
+}
+
+.content {
+
+    position: relative;
+    top: 100px;
+
+}
+
+.text {
+
+    position: relative;
+
+}
+
+.key-svg {
+
+    position: relative;
+    top: 460px;
+
+    transform: scale(1.9);
+
+}
+
+.head1 {
+
+    font-size: 150px;
+
+}
+
+.h1-1 {
+
+    font-weight: normal;
+
+}
+
+.h1-2 {
+
+    font-size: 230px;
+    font-weight: 500;
+
+}
+
+.last {
+
+    position: relative;
+    top: -40px;
+
+}
+
+.desc1 {
+
+    font-size: 60px;
+
 }
 
 #ctaBtn {
@@ -354,7 +415,23 @@ ul {list-style-type: none;}
 
     border-radius: 30px;
 
-    border: 1px solid red;
+}
+
+.portfolio-work-image {
+
+    width: 100%;
+    height: 100%;
+
+    border-radius: 30px;
+
+}
+
+.portfolio-work-image img {
+
+    width: 100%;
+    height: 100%;
+
+    border-radius: 30px;
 
 }
 
@@ -374,37 +451,33 @@ ul {list-style-type: none;}
 
     border-radius: 200px;
 
-    box-shadow:  5px 5px 10px #b5b5b5,
+    box-shadow: 5px 5px 10px #b5b5b5,
         -5px -5px 10px #ffffff;
+
+}
+
+.portfolio-control.in {
+
+    box-shadow: inset 5px 5px 10px #b5b5b5,
+        inset -5px -5px 10px #ffffff;
+
+}
+
+#previousWork {
+
+    padding-right: 10px;
+
+}
+
+#nextWork {
+
+    transform: scaleX(-1);
 
 }
 
 .portfolio-control-svg {
 
     transform: scale(0.7);
-
-}
-
-.content {
-
-    position: relative;
-    top: 450px;
-
-}
-
-.text {
-
-    position: relative;
-
-}
-
-h1 {font-size: 100px;}
-h2 {font-size: 50px; font-weight: normal;}
-
-.desc1 {
-
-    position: relative;
-    top: 20px;
 
 }
 
