--- a/base/templates/landing.html
+++ b/base/templates/landing.html
@@ -138,7 +138,7 @@
 
     <div class="body">
 
-        <div class="s1" id="general">
+        <section class="s1" id="general">
 
             <div class="content">
 
@@ -200,9 +200,9 @@
 
             </div>
 
-        </div>
+        </section>
 
-        <div class="s2" id="portfolio">
+        <section class="s2" id="portfolio">
 
             <div class="content2">
 
@@ -232,6 +232,12 @@
 
                             </section>
 
+                            <section id="portfolio-service-shop-website">
+
+                                <img src="{% static 'img\portfolio\заказать_интернет_сайт.jpg' %}" alt="Заказать Интернет Сайт">
+
+                            </section>
+
                         </div>
 
                     </div>
@@ -248,7 +254,7 @@
 
             </div>
 
-        </div>
+        </section>
 
     </div>
 
